@@ -131,9 +131,10 @@ static const char *_linkCmd[] =
   "aslink", "-nf", "$1", NULL
 };
 
+/* $3 is replaced by assembler.debug_opts resp. port->assembler.plain_opts */
 static const char *_asmCmd[] =
 {
-  "asx8051", "$l", "-plosgffc", "$1.asm", NULL
+  "asx8051", "$l", "$3", "$1.asm", NULL
 };
 
 /* Globals */
